--- a/demos/css/style.css
+++ b/demos/css/style.css
@@ -44,12 +44,13 @@
   }
 
 #bigVideo video {
-    width:100%;
+    width:100vw;
+	height:80vh;
     text-align: center;
 }
 #smallVideo video {
-    width: 60vh;
-    height: 30vh;
+    width: 50vh;
+    
     text-align: center;
 }
         
